# CloakBrowserMCP

./: .gitignore  LICENSE  README.md  pyproject.toml
.superpowers/sdd/: final-review-fix-report.md  task-2-report.md  task-3-report.md  task-4-report.md
cloakbrowser_mcp/: __init__.py
docs/superpowers/plans/: 2026-06-22-cloakbrowser-mcp-implementation.md  2026-06-23-cloakbrowser-mcp-v2-browser-capabilities.md
docs/superpowers/specs/: 2026-06-22-cloakbrowser-mcp-design.md  2026-06-23-cloakbrowser-mcp-v2-browser-capabilities-design.md
src/cloakbrowser_mcp/: __init__.py  browser.py  display.py  errors.py  models.py  server.py
tests/: test_browser.py  test_display.py  test_models.py  test_server.py  test_smoke.py
