[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloakbrowser-mcp"
version = "0.1.0"
description = "MCP server for controlling CloakBrowser in headless and virtual-display Linux environments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloakbrowser>=0.4,<1",
    "mcp[cli]>=1.28,<2",
    "pyvirtualdisplay>=3,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<2",
]

[project.scripts]
cloakbrowser-mcp = "cloakbrowser_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cloakbrowser_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "smoke: real browser smoke tests",
]
